# researchy

./: .gitignore  AUTH_DISABLED_README.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile  FASTAPI_DEPLOYMENT.md  FEATURES.md  FULL_STACK_NGROK.md  LANGGRAPH_AGENT_GUIDE.md  NGROK_DEPLOYMENT.md  NGROK_SETUP_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  README.md  SUPABASE_SETUP.md  fastapi-dockerfile  get-ngrok-urls.js  index.ts  ngrok.yml  package-lock.json  package.json  start-ngrok.bat
agent/ai-researcher/: .dockerignore  Dockerfile  arxiv_tool.py  main.py  pyproject.toml  read_pdf.py  requirements.txt  supabase_storage.py  write_pdf.py
backend/: .dockerignore  .env.example  Dockerfile  FEATURES.md  README.md  index.ts  package.json  render.yaml  setup-supabase-storage.sql  tsconfig.json
docs/: AI_AGENT_ARCHITECTURE.md  CONTEXT_FIX.md  DEPLOYMENT.md  FASTAPI_DEPLOYMENT.md  NEXT_FEATURES.md  OPTIMIZATION_APPLIED.md  PDF_LIBRARY_FEATURE.md  STARTUP_VISION.md
frontend/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  vercel.json
prisma/: dev.db  schema.prisma
testsprite_tests/: TC001_User_Sign_Up_with_Clerk_OAuth.py  TC001_user_authentication_and_session_management.py  TC002_User_Sign_In_with_Clerk_OAuth.py  TC002_real_time_streaming_chat_responses.py  TC003_Sign_In_Failure_with_Invalid_Credentials.py  TC003_ai_generated_conversation_titles.py  TC004_Real_time_Streaming_Chat_Generates_Token_by_Token_Response.py  TC004_academic_paper_search_with_arxiv_api.py  TC005_Conversation_Title_Generation_and_Assignment.py  (+22 more)
(+16 files in other folders)
